[build-system]
requires = ["setuptools >= 62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aio_client"
dynamic = ["dependencies", "optional-dependencies"]
version = "0.1.0"
description = "Adobe IO API Python Client"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Equancy", email = "contact@equancy.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["adobe_client"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/equancy/aio-client"
"Documentation" = "https://github.com/equancy/aio-client"
