[build-system]
requires = ["setuptools >= 62.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aio_client"
version = "0.1.0"
description = "Adobe IO API Python Client"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Equancy", email = "contact@equancy.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "azure-storage-blob",
]

[tool.setuptools]
#packages = ["adobe_client"]
package-dir = {"" = "adobe_client"}

[project.urls]
"Homepage" = "https://github.com/equancy/aio-client"
"Documentation" = "https://github.com/equancy/aio-client"
